# ParKissat-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  wrapper.cpp  wrapper.h
examples/: test_auto_threads.rs  test_threading.rs
src/: error.rs  ffi.rs  lib.rs  wrapper.rs
tests/: integration.rs
