[package]
name = "parkissat-sys"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for ParKissat-RS SAT solver"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shaowei-cai-group/ParKissat-RS"
keywords = ["sat", "solver", "ffi", "parkissat"]
categories = ["algorithms", "external-ffi-bindings"]

[[example]]
name = "test_threading"
path = "examples/test_threading.rs"

[[example]]
name = "test_auto_threads"
path = "examples/test_auto_threads.rs"

[dependencies]
libc = "0.2"
thiserror = "2.0.12"
num_cpus = "1.16"

[build-dependencies]
cc = "1.2"
bindgen = "0.72"

[dev-dependencies]
tempfile = "3.20"

[features]
default = []